external build: suggest user to disable java extensions if build process failed to start with NoSuchMethodError (IDEA-147368, IDEA-CR-6812)